2005-10-21  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs:
		Add helpers for reading.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil/GenericContext.cs:
		Working on generic parameters reading.
		Still have troubles reading a 2.0 corlib.

	* Mono.Cecil/IHasMarshalSpec.cs:
		API fix.

	* Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil.Cil/VariableDefinition.cs:
		Override ToString.

2005-10-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		ShortInlineI operands are signed.
		Spotted by Rodrigo B. de Oliveira.

	* CodeGen/templates/OpCodes.cs
	  Mono.Cecil.Cil/OpCodes.cs:
		Add 2.0 opcodes.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/AssemblyDefinition.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Handle the assembly kind in a smoothie way.

2005-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/AssemblyDefinition.cs: Added an override for ToString to
	ease debugging.
	* Mono.Cecil/ModuleDefinition.cs: Make SecurityDeclaration works with
	2.0 assemblies.
	* Mono.Cecil/ReflectionReader.cs: Modified BuildSecurityDeclaration
	to use the new SecurityDeclarationReader (supporting both formats).
	* Mono.Cecil/SecurityAction.cs: Removed actions that were "cutted" out
	of 2.0 final.
	* Mono.Cecil/SecurityDeclarationReader.cs: New. Handle both the 1.x 
	and 2.0 formats for reading declarative security.

2005-10-18  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs:
		A little change before the fix.

	* Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil.Cil/MethodBody.cs:
		Implement method cloning.

	* Mono.Cecil/ModuleReference.cs